# Ohjelmistotekniikka-2022

./: README.md
dokumentaatio/: arkkitehtuuri.md  changelog.md  mermaid.md  tyoaikakirjanpito.md  vaatimusmaarittely.md
laskarit/viikko1/: gitlog.txt
src/: pyproject.toml  tasks.py  tetris.py  tetris_main.py
